Bug 155496 - ReqIF export produces invalid XML (unmatched closing elements) for a list with subheader
Summary: ReqIF export produces invalid XML (unmatched closing elements) for a list wit...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:7.6.0 target:7.5.5
Keywords:
Depends on:
Blocks:
 
Reported: 2023-05-25 16:20 UTC by Mike Kaganski
Modified: 2023-06-16 12:57 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Lists with second-level header elements (885 bytes, application/vnd.oasis.opendocument.text)
2023-05-25 16:20 UTC, Mike Kaganski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2023-05-25 16:20:02 UTC
Created attachment 187504 [details]
Lists with second-level header elements

Open the attached document; export to ReqIF using this command:

> soffice --convert-to "xhtml:HTML (StarWriter):xhtmlns=reqif-xhtml" listItemSubheader.fodt

The resulting .xhtml will contain an unmatched </reqif-xhtml:li> and </reqif-xhtml:ul> closing elements, so will be invalid XML/ReqIF.
Comment 1 Commit Notification 2023-05-26 07:34:35 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7d87770986fdfc43dd5d4b514f68026ff6ededcf

tdf#155496: Export list header to (X)HTML using 'display: block' style

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2023-05-26 11:31:02 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/758f56e40a9bf0e931110517719580c058d30688

tdf#155496: Export list header to (X)HTML using 'display: block' style

It will be available in 7.5.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.