tdf#155496: Export list header to (X)HTML using 'display: block' style

This re-implements commit 013a4f1f5c9ea5fb511568c53a7e76d1b365a65d
(sw XHTML export: fix handling of list labels, 2021-05-13), and
instead of not putting headers (ODF 'text:list-header' elements)
into lists, this adds 'style="display: block"' attribute to the
respective list items. This makes sure that the items use proper
list indentation, and produces correct markup.

Change-Id: I900e4aebbe562830dc2ce5400e3e33b38c2f2faa
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152280
Tested-by: Jenkins
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152298